--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,6 +1,7 @@
 .text-tiny {
   @extend %text-tiny;
   @extend %ibmPlexSans;
+  @extend %colorDarkGray;
 }
 
 .text-normal {
@@ -45,4 +46,17 @@
 
 .logo {
   @extend %logo;
+  @extend %colorBlack;
+}
+
+.color--black {
+  @extend %colorBlack;
+}
+
+.color--white {
+  @extend %colorWhite;
+}
+
+.color--dark-grey {
+  @extend %colorDarkGray;
 }
