--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -200,6 +200,15 @@
         width: 10px;
       }
     }
+
+    &--type--lecture {
+      @include onMobile {
+        text-align: center;
+      }
+      @include onTablet {
+        text-align: left;
+      }
+    }
   }
 
   &__description {
