--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -20,9 +20,21 @@
       background-image: url(../images/svg_images/arrow_right_black.svg);
     }
 
+    &--type--up {
+      background-image: url(../images/svg_images/arrow_up_green.svg);
+    }
+
     &:hover {
       background-image: url(../images/svg_images/arrow_right_green.svg);
     }
+  }
+
+  &--facebook {
+    background-image: url(../images/svg_images/facebook-logo.svg);
+  }
+
+  &--instagram {
+    background-image: url(../images/svg_images/instagram-logo.svg);
   }
 }
 
