--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -2,7 +2,10 @@
   scroll-behavior: smooth !important;
   font-size: 16px;
 
-  &:has(.page__menu:target) {
+  // &:has(.page__menu:target) {
+  //   overflow: hidden;
+  // }
+  &:has(.page__menu__open) {
     overflow: hidden;
   }
 
@@ -25,7 +28,13 @@
     transition: all $transition-speed;
     transform: translateY(-100%);
 
-    &:target {
+    // &:target {
+    //   transform: translateY(0);
+    //   opacity: 1;
+    //   pointer-events: all;
+    // }
+
+    &__open {
       transform: translateY(0);
       opacity: 1;
       pointer-events: all;
