--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -24,12 +24,22 @@
     text-decoration: none;
     transition: hover, $transition-speed;
 
+    &--type--up {
+      cursor: pointer;
+      border: 1px solid $c-green;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      align-self: flex-end;
+      background-color: $c-white;
+    }
+
     &__text {
       display: flex;
       justify-content: center;
       align-items: center;
       flex: 1;
-      color: $c-black;
+      background-color: $c-white;
     }
 
     &__icon {
