--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,6 +1,8 @@
 // #region nav
 .nav {
+  color: inherit;
   width: 100%;
+
   @include onDesktop {
     display: flex;
     justify-content: center;
@@ -18,6 +20,7 @@
     @include onTablet {
       gap: 20px;
     }
+    
     @include onDesktop {
       column-gap: 30px;
     }
@@ -30,7 +33,6 @@
   &__link {
     text-decoration: none;
     width: 100%;
-    color: $c-white;
     position: relative;
 
     &::after {
@@ -48,6 +50,25 @@
 
     &:hover::after {
       transform: scale(1);
+    }
+
+    &--highlight--black {
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: -10px;
+        display: block;
+        height: 1px;
+        width: 100%;
+        background-color: $c-black;
+        transition: transform 0.3s;
+        transform: scale(0);
+        transform-origin: center;
+      }
+
+      &:hover::after {
+        transform: scale(1);
+      }
     }
   }
 }
