--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -1,12 +1,13 @@
 .subscribe {
   @include pageGrid;
   row-gap: 20px;
-  margin-bottom: 50px;
+  margin-bottom: 18px;
 
   padding-block: 88px;
 
   @include onTablet {
     padding-block: 82px;
+    margin: 0;
   }
 
   @include onDesktop {
