--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -7,7 +7,6 @@
 }
 
 %header-1 {
-  color: $c-black;
   font-size: 45px;
   font-style: normal;
   font-weight: 700;
@@ -28,7 +27,6 @@
 }
 
 %header-2 {
-  color: $c-black;
   text-align: center;
   font-size: 36px;
   font-style: normal;
@@ -41,7 +39,6 @@
 }
 
 %header-3 {
-  color: $c-black;
   font-size: 28px;
   font-style: normal;
   font-weight: 400;
@@ -53,7 +50,6 @@
 }
 
 %header-4 {
-  color: $c-white;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -65,7 +61,6 @@
 }
 
 %text-tiny {
-  color: $c-dark-gray;
   font-size: 16px;
   font-style: normal;
   font-weight: 300;
@@ -73,7 +68,6 @@
 }
 
 %text-normal {
-  color: $c-white;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -88,7 +82,6 @@
 }
 
 %text-normal-bold {
-  color: $c-white;
   font-size: 14px;
   font-style: normal;
   font-weight: 600;
@@ -103,7 +96,6 @@
 }
 
 %logo {
-  color: $c-black;
   text-transform: uppercase;
   text-align: center;
   font-size: 30px;
@@ -111,4 +103,20 @@
   font-style: normal;
   font-weight: 700;
   line-height: 100%;
+}
+
+%colorBlack {
+  color: $c-black;
+}
+
+%colorWhite {
+  color: $c-white;
+}
+
+%colorDarkGray {
+  color: $c-dark-gray;
+}
+
+%colorDarkGreen {
+  color: $c-dark-green;
 }
