--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -39,7 +39,7 @@
       justify-content: center;
       align-items: center;
       flex: 1;
-      background-color: $c-white;
+      color: $c-green;
     }
 
     &__icon {
