fix footer socials

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -5,6 +5,8 @@
   background-repeat: no-repeat;
   background-position: center;
 
+  transition: all, $transition-speed;
+
   &--menu {
     background-image: url(../images/svg_images/baseline-menu.svg);
   }
@@ -35,10 +37,18 @@
 
   &--facebook {
     background-image: url(../images/svg_images/facebook-logo.svg);
+
+    &:hover {
+      background-image: url(../images/svg_images/facebook-logo-hover.svg);
+    }
   }
 
   &--instagram {
     background-image: url(../images/svg_images/instagram-logo.svg);
+
+    &:hover {
+      background-image: url(../images/svg_images/instagram-logo-hover.svg);
+    }
   }
 }
 
