add minor fixes #2

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -167,9 +167,13 @@
   &__nav {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 20px;
+    margin-top: 40px;
     max-width: 300px;
     height: fit-content;
+
+    @include onTablet {
+      margin-top: 64px;
+    }
 
     @include onDesktop {
       margin-top: 0;
