--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -11,7 +11,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0;
+    margin-inline: auto;
+    margin-block: 0;
     padding: 0;
   }
 
