--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -91,8 +91,8 @@
         }
 
         &:focus:valid {
-          border-color: $c-dark-green;
-          color: $c-dark-green;
+          border-color: $c-green;
+          color: $c-green;
         }
 
         &:-webkit-autofill::first-line {
@@ -108,8 +108,8 @@
         }
 
         &:-webkit-autofill:valid {
-          -webkit-text-fill-color: $c-dark-green;
-          border-color: $c-dark-green;
+          -webkit-text-fill-color: $c-green;
+          border-color: $c-green;
         }
 
         &:-webkit-autofill:invalid {
