--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -6,16 +6,8 @@ $c-black: #0f0e08;
 $c-green: #1a5a4c;
 $c-red: #f14a27;
 
-// old project vars
-$c-beige: #e4dfd3;
-$c-dark-gray: #8e8d8c;
-$c-gray: #bdbdbd;
-$c-light-yellow: #e5e5e5;
-$c-light-gray: #eee;
-$c-light-green: #f2f2f2;
-$c-dark-green: #344f10;
-
 // device width breakpoints
+$design-max-width: 1920px; // need for good looking on
 $design-min-width: 1440px; // - The design 1440px
 $desktop-min-width: 1280px; // - Desktop 1280px
 $tablet-min-width: 640px; // - Tablet 640px
