--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -9,6 +9,9 @@
   display: flex;
   justify-content: center;
 
+  max-width: $design-max-width;
+  margin-inline: auto;
+
   &__content {
     @include pageGrid;
     width: 100%;
