--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,11 +1,14 @@
 .gallery {
   margin-bottom: 100px;
 
+  max-width: $design-max-width;
+  margin-inline: auto;
+  
   @include onDesktop {
     @include pageGrid;
     row-gap: 56px;
   }
-  
+
   &__header {
     margin-bottom: 40px;
     @include onDesktop {
