--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -2,9 +2,12 @@
   width: 100%;
   margin-bottom: 70px;
 
+  max-width: $design-max-width;
+  margin-inline: auto;
+
   @include onTablet {
     margin-bottom: 88px;
-    overflow: hidden;
+    // overflow: hidden;
   }
 
   @include onDesktop {
