--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -8,12 +8,14 @@
   &__wrapper {
     background-color: $c-green;
     padding-block: 27px;
-    width: 100%;
   }
 
   &__content {
     @include pageGrid;
     justify-content: center;
+
+    max-width: $design-max-width;
+    margin-inline: auto;
   }
 
   &__top {
