--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -7,6 +7,11 @@
   }
 
   &__body {
+    margin: 0;
+    padding: 0;
+  }
+
+  &__wrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -14,6 +19,9 @@
     margin-inline: auto;
     margin-block: 0;
     padding: 0;
+
+    overflow-x: hidden;
+    position: relative;
   }
 
   &__menu {
@@ -33,7 +41,6 @@
     }
   }
 }
-
 * {
   box-sizing: border-box;
 }
