--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -7,7 +7,6 @@
 
   @include onTablet {
     margin-bottom: 88px;
-    // overflow: hidden;
   }
 
   @include onDesktop {
@@ -98,6 +97,7 @@
 
     @include onDesign {
       max-height: 755px;
+      width: 180%;
     }
   }
 
