--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,24 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/_mixins.scss";
+@import "./utils/_variables.scss";
+@import "./utils/_reset.scss";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/icon-menu.scss";
+@import "./blocks/container.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/museum-art.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/events-header.scss";
+@import "./blocks/shedules.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/up-button.scss";
+@import "./blocks/navigation-list.scss";
+@import "./blocks/actual-events.scss";
+@import "./blocks/event.scss";
+@import "./blocks/classicalism.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/form.scss";
