change menu layot and content max width

--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -20,7 +20,7 @@
   &__header {
     @include onTablet {
       align-self: flex-start;
-      max-width: $design-max-width;
+      max-width: $design-min-width;
       margin-inline: auto;
     }
   }
@@ -29,7 +29,7 @@
 .event {
 
   &--type--show {
-    max-width: $design-max-width;
+    max-width: $design-min-width;
     margin-inline: auto;
   }
 
