--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -2,7 +2,7 @@
   width: 100%;
   margin-bottom: 70px;
 
-  max-width: $design-max-width;
+  max-width: $design-min-width;
   margin-inline: auto;
 
   @include onTablet {
