--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -5,16 +5,21 @@
   z-index: 1;
   background-color: rgba($color: $c-black, $alpha: 0.5);
 
-  &__wrapper {
+  &__cover {
     background-color: $c-green;
     padding-block: 27px;
+  }
+
+  &__wrapper {
+    max-width: $design-min-width;
+    margin-inline: auto;
   }
 
   &__content {
     @include pageGrid;
     justify-content: center;
 
-    max-width: $design-max-width;
+    max-width: $design-min-width;
     margin-inline: auto;
   }
 
