--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
 
-  max-width: $design-max-width;
+  max-width: $design-min-width;
   margin-inline: auto;
 
   &__content {
