--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,9 +1,9 @@
 .gallery {
   margin-bottom: 100px;
 
-  max-width: $design-max-width;
+  max-width: $design-min-width;
   margin-inline: auto;
-  
+
   @include onDesktop {
     @include pageGrid;
     row-gap: 56px;
