fix container layout

--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -64,7 +64,6 @@
       }
 
       @include onDesktop {
-        grid-column: 1 / span 7;
         grid-row: 1 / span 5;
         margin: 0;
         padding-bottom: 550px;
@@ -98,6 +97,10 @@
       grid-column: 4 / span 6;
       margin-top: -10%;
       padding-inline: 150px;
+    }
+
+    @include onDesign {
+      margin-top: -4%;
     }
   }
 
