fix image size and change max width

--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -13,14 +13,10 @@
     margin-bottom: 200px;
   }
 
-  @include onDesign {
-    // width: 100vw;
-  }
-
   &__header {
     @include onTablet {
       align-self: flex-start;
-      max-width: $design-min-width;
+      max-width: $desktop-min-width;
       margin-inline: auto;
     }
   }
@@ -29,7 +25,7 @@
 .event {
 
   &--type--show {
-    max-width: $design-min-width;
+    max-width: $desktop-min-width;
     margin-inline: auto;
   }
 
