--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,7 +1,7 @@
 .gallery {
   margin-bottom: 100px;
 
-  max-width: $design-min-width;
+  max-width: $desktop-min-width;
   margin-inline: auto;
 
   @include onDesktop {
