--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -2,7 +2,7 @@
   width: 100%;
   margin-bottom: 70px;
 
-  max-width: $design-min-width;
+  max-width: $desktop-min-width;
   margin-inline: auto;
 
   @include onTablet {
@@ -79,7 +79,6 @@
 
     @include onTablet {
       position: relative;
-      right: 0;
       width: 150%;
 
       grid-column: 4 / span 3;
@@ -97,7 +96,7 @@
 
     @include onDesign {
       max-height: 755px;
-      width: 180%;
+      width: 200%;
     }
   }
 
