--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -11,7 +11,7 @@
   }
 
   &__wrapper {
-    max-width: $design-min-width;
+    max-width: $desktop-min-width;
     margin-inline: auto;
   }
 
@@ -19,7 +19,7 @@
     @include pageGrid;
     justify-content: center;
 
-    max-width: $design-min-width;
+    max-width: $desktop-min-width;
     margin-inline: auto;
   }
 
