--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -22,7 +22,7 @@
     }
 
     @include onDesign {
-      max-width: $design-min-width;
+      max-width: $desktop-min-width;
       margin-inline: auto;
     }
 
