fix header layout

--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -16,6 +16,8 @@
   &__header {
     @include onTablet {
       align-self: flex-start;
+      width: 100%;
+      text-align: left;
       max-width: $desktop-min-width;
       margin-inline: auto;
     }
