--- a/src/styles/blocks/museum-art.scss
+++ b/src/styles/blocks/museum-art.scss
@@ -37,11 +37,12 @@
     position: relative;
     align-self: center;
     padding: 0 50px 0 0;
-    @include hover (transform, scale(1.05));
 
     &:hover {
-      transition: box-shadow 0.3s;
+      transform: scale(1.05);
       box-shadow: 0 0 40px -16px rgba(0,0,0,0.75);
+      transition: box-shadow transform;
+      transition-duration: 0.3s;
     }
   }
 
