--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./header/header-icons.scss";
+@import "./header/header-top.scss";
+@import "./header/header-bottom.scss";
+@import "./page/page.scss";
+@import "./main/actual.scss";
+@import "./main/lecture.scss";
+@import "./main/gallery.scss";
+@import "./main/subscription.scss";
+@import "./aside/aside.scss";
+@import "./aside/aside-icons.scss";
+@import "./footer/footer.scss";
