--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,31 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  text-align: center;
+  font-size: 45px;
+  line-height: 100%;
+}
+
+%p {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 150%;
+}
+
+%link {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+}
+
+%after-underline {
+  content: "";
+  position: absolute;
+  bottom: -4px;
+  display: block;
+  height: 1px;
+  width: 100%;
+  background-color: $color-text-white;
 }
