fix mistakes with position

--- a/src/styles/aside/aside.scss
+++ b/src/styles/aside/aside.scss
@@ -48,13 +48,18 @@
 
   .aside__top {
     border-bottom: 1px solid #fff;
+    gap: 10%;
+  }
+
+  .row__aside-text {
+    min-width: 141px;
+    max-width: 240px;
   }
 }
 
 @include tablet {
 
   .aside__top {
-    justify-content: space-between;
     border-bottom: none;
   }
 }
@@ -82,7 +87,7 @@
 }
 
 .bottom__title {
-  font-weight: 400;
+  font-weight: 300;
   font-size: 14px;
   line-height: 19.69px;
   margin-bottom: 20px;
@@ -135,8 +140,11 @@
   .aside__grid {
     font-size: 22px;
     line-height: 22px;
-    margin: 0 102px;
     color: #fff;
+  }
+  .row__aside-text {
+    min-width: 141px;
+    max-width: 165px;
   }
 }
 
