--- a/src/styles/main/gallery.scss
+++ b/src/styles/main/gallery.scss
@@ -51,4 +51,7 @@
     margin-bottom: 30px;
    justify-content: center;
   }
+  .grid__row > img {
+    @include transition(transform,scale(1.05));
+  }
 }
