--- a/src/styles/main/subscription.scss
+++ b/src/styles/main/subscription.scss
@@ -9,15 +9,21 @@
 
 .tickets__link--orange {
   background-color: #F14A27;
+  padding: 33%;
   &:hover {
     background-color: #be452b;
   }
-  padding: 27%;
 }
 
 .tickets__row--orange {
   margin: 0 auto 88px;
 
+}
+
+@include phone-max {
+  .tickets__link {
+    padding: 27% 24%;
+  }
 }
 
 @include phone {
@@ -56,9 +62,6 @@
   .tickets__link--orange {
     margin-left: 16px;
   }
-  .tickets__link {
-    padding: 35% 33%;
-  }
   .subscription__title {
     font-size: 48px;
     line-height: 48px;
@@ -82,9 +85,7 @@
   .tickets__link--orange {
     margin-left: 30px;
   }
-  .tickets__link {
-    padding: 33% 33%;
-  }
+
   .subscription__title {
     padding: 163px 0 16px;
   }
