--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -57,6 +57,12 @@
   margin-bottom: 10px;
 }
 
+@include phone {
+  .row__footer-text {
+    max-width: 135px;
+  }
+}
+
 @include phone-max {
   .row__item {
     display: flex;
@@ -88,12 +94,18 @@
     width: 55%;
     margin: 64px 18% 120px;
   }
+  .row__footer-text {
+    max-width: 155px;
+  }
   .footer__copyright {
     display: flex;
     justify-content: space-between;
   }
   .footer__bottom {
     margin-top: 50px;
+  }
+  .item__contacts {
+    width: 220px;
   }
 }
 
@@ -131,9 +143,17 @@
     content: "";
     position: absolute;
     width: 1px;
-    height: 100%;
+    height: 80%;
     background-color: #1a5a4cb0;
-    left: 55%;
+    left: 50%;
+    top: 10%;
+  }
+
+  .row__footer-text {
+    max-width: 200px;
+  }
+  .item__contacts {
+    width: 172px;
   }
 
 }
@@ -144,4 +164,40 @@
 
 .footer__grid > ::before {
   border-bottom: 1px solid #000;
+}
+
+.contacts__link {
+  width: fit-content;
+  position: relative;
+}
+
+.contacts__link::before {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  height: 1px;
+  background-color: #0f0e08;
+  transition: transform 0.3s ease;
+  transform: scale(0);
+}
+
+.contacts__link:hover::before {
+  transform-origin: left;
+  transform: scale(1);
+}
+
+.fa-brands {
+  font-size: 24px;
+  transition: all 0.3s ease;
+}
+
+.fa-instagram:hover {
+  color: #e01d9f;
+  transform: scale(2);
+}
+
+.fa-facebook:hover {
+  color: blue;
+  transform: scale(2);
 }
