--- a/src/styles/header/header-bottom.scss
+++ b/src/styles/header/header-bottom.scss
@@ -14,6 +14,8 @@
 
 .tickets__link--green {
   background-color: #1a5a4c;
+  padding: 37% 33%;
+
   &:hover {
     background-color: #133a31;
   }
@@ -22,14 +24,15 @@
 .tickets__link {
   transition: all 0.3s;
   color: #fff;
-  padding: 30%;
   width: 100%;
   height: 100%;
 }
 
 .tickets__text {
+  font-family: "IBM Plex Sans", sans-serif;
   @include center;
   font-weight: 500;
+  font-size: 16px;
   width: 100%;
 }
 
@@ -110,8 +113,9 @@
   }
   .bottom__subtitle {
     display: block;
-    padding: 20% 10%;
+    padding: 20% 0;
     position: relative;
+    top: -100px;
     color: #000;
     font-weight: 700;
     font-size: 14px;
@@ -131,5 +135,4 @@
       transform: rotate(360deg);
     }
   }
-
 }
