--- a/src/styles/footer/footer.scss
+++ b/src/styles/footer/footer.scss
@@ -12,6 +12,13 @@
   position: relative;
 }
 
+.form {
+  display: flex;
+}
+
+.form__button {
+  display: block;
+}
 .footer__bottom {
   display: grid;
   grid-template-columns: 1fr 1fr;
