--- a/src/styles/header/header-bottom.scss
+++ b/src/styles/header/header-bottom.scss
@@ -2,10 +2,12 @@
   @include flex-sps-center;
   width: 280px;
   @include transition(transform, scale(1.2));
+  color: #000;
 }
 
 .tickets__row--green {
   border: 1px solid #1a5a4c;
+  display: block;
 }
 
 .tickets__link-row {
@@ -22,7 +24,7 @@
 }
 
 .tickets__link {
-  transition: all 0.3s;
+  transition: all 0.3s ease;
   color: #fff;
   width: 100%;
   height: 100%;
