--- a/src/styles/main/subscription.scss
+++ b/src/styles/main/subscription.scss
@@ -8,8 +8,10 @@
 }
 
 .tickets__link--orange {
+  border: none;
+  transition: all 0.3s ease;
   background-color: #F14A27;
-  padding: 33%;
+  cursor: pointer;
   &:hover {
     background-color: #be452b;
   }
